# banking_api

./: .dockeringore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint.yml  tests.yml
banking_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
banks/: apps.py  docs.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
banks/fixtures/: initial_data.json
banks/migrations/: 0001_initial.py  0002_alter_bank_table_alter_paymentsystem_table.py  0002_rename_type_bank_bank_type.py  0003_alter_bank_bank_type.py  0003_alter_bank_type.py  0004_alter_bank_bank_type.py  0004_alter_bank_name_alter_paymentsystem_name_and_more.py  0005_currency.py  0006_delete_currency.py  0007_currency.py  0008_rename_rate_currency_rates.py
credit_cards/: apps.py  docs.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
credit_cards/fixtures/: initial_data.json
credit_cards/migrations/: 0001_initial.py  0002_alter_creditcard_currency.py  0002_creditcard_balance_creditcard_currency.py  0003_alter_creditcard_currency.py  0003_alter_creditcard_unique_together.py  0004_creditcard_is_expired.py  0005_alter_creditcard_currency.py  0006_creditcard_new_balance.py  0007_copy_data_from_one_field_to_another.py  0008_remove_creditcard_new_balance_and_more.py
credit_cards/repositories/: credit_card_repositories.py
credit_cards/repository/: credit_card_repositories.py
credit_cards/services/: credit_card_services.py
credit_cards/tests/: test_e2e.py  test_unit.py
images/: apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_alter_image_table.py
management/management/commands/: import_test_data.py
practice_2/: .env  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
tenants/: apps.py  models.py  tests.py  views.py
tenants/management/commands/: create_new_tenant.py  init_tenant.py
tenants/migrations/: 0001_initial.py
users/: admin.py  apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/fixtures/: initial_data.json
users/migrations/: 0001_initial.py  0002_contact.py  0003_alter_contact_table.py  0004_profile_profile_image.py
users/repositories/: user_repositories.py
users/repository/: user_repositories.py
users/services/: user_services.py
users/tests/: test_e2e.py  test_unit.py
utils/: paginations.py  sql_utils.py
